--- a/style.css
+++ b/style.css
@@ -102,11 +102,26 @@ html, body{
     
 }
 
+.table > button:hover{
+    background-color: rgb(198, 255, 255);
+}
+
 .bottom{
     display: flex;
     flex-direction: column;
     align-items: stretch;
     gap: 5px;
+}
+
+.bottom > button {
+    background-color: aliceblue;
+    border-radius: 10px;
+    border-style: none;
+}
+
+.bottom > button:hover{
+    box-shadow: 0px 5px 3px rgba(28, 17, 16, 0.247);
+    transform: translateY(-2px);
 }
 
 .winner{
